<resources>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_name">收银通</string>
    <string name="backButton">返回</string>
    <string name="desc_image">image</string>
    <string name="notice_aboutpwd">请使用不同的登录密码和会员支付密码，建议密码使用超过6位大小写加数字混合，为了您的安全，请定期更换密码！</string>
    <string name="formData_key_title">title</string>
    <string name="formData_key_data">data</string>
    <string name="formData_key_transAmount">transAmount</string>
    <string name="formData_key_payAmount">payAmount</string>
    <string name="formData_key_payMethod">payMethod</string>
    <string name="formData_value_payMethod_barCode">barCode</string>
    <string name="formData_value_payMethod_soundWave">soundWave</string>
    <string name="formData_key_notPaid">notPaid</string>
    <string name="formData_key_mOrderId">mOrderId</string>
    <string name="formData_key_payType">payType</string>
    <string name="formData_key_payData_field0">field0</string>
    <string name="formData_key_payData_field1">field1</string>
    <string name="formData_key_payData_field2">field2</string>
    <string name="formData_key_payData_field3">field3</string>
    <string name="formData_key_payData_field4">field4</string>
    <string name="transCurrency_text">人民币</string>
    <string name="intent_extra_name_formData">formData</string>
    <string name="lv_loadmore_row_lv_notice_show">点击查看更多</string>
    <string name="lv_loadmore_row_lv_notice_loading">加载中&#8230;</string>
    <string name="netconnect_result_no_connection">没有网络连接</string>
    <string name="netconnect_result_RESPONSECODE_EXCEPTION_TIMEOUT">联网超时</string>
    <string name="netconnect_result_redirection">重定向</string>
    <string name="netconnect_result_SC_BAD_REQUEST">错误请求</string>
    <string name="netconnect_result_SC_UNAUTHORIZED">未授权</string>
    <string name="netconnect_result_SC_FORBIDDEN">禁止访问</string>
    <string name="netconnect_result_SC_NOT_FOUND">找不到请求内容</string>
    <string name="netconnect_result_request_error">客户端错误</string>
    <string name="netconnect_result_SC_BAD_GATEWAY">网关错误</string>
    <string name="netconnect_result_SC_SERVICE_UNAVAILABLE">服务不可用</string>
    <string name="netconnect_result_SC_GATEWAY_TIMEOUT">网关超时</string>
    <string name="netconnect_result_SC_HTTP_VERSION_NOT_SUPPORTED">不支持的 HTTP版本</string>
    <string name="netconnect_result_server_error">服务器错误</string>
    <string name="netconnect_result_default">通讯故障</string>
    <string name="opitonsMenu_quitApp_text">退出</string>
    <string name="transaction_manage_module_title_consumption_record_today">今日交易明细</string>
    <string name="transaction_manage_module_title_consumption_record_old">历史交易明细</string>
    <string name="transaction_manage_module_title_delivery_voucher_record">提货记录</string>
    <string name="transaction_manage_module_title_consumption_summary">今日交易汇总</string>
    <string name="transaction_manage_module_title_single_record_search">机构参考号查询</string>
    <string name="transaction_manage_module_title_trans_id_search">交易号查询</string>
    <string name="settins_index_module_title_login">登录</string>
    <string name="settins_index_module_title_logout">退出</string>
    <string name="settins_index_module_title_merchant_info">客户信息</string>
    <string name="settins_index_module_title_setMerchId">重置客户号</string>
    <string name="settins_index_module_title_setMachineId">设置设备号</string>
    <string name="settins_index_module_title_clearReverseData">清除冲正数据</string>
    <string name="settins_index_module_title_downloadMerchData">参数更新</string>
    <string name="settins_index_module_title_set_trans_id">设置流水号</string>
    <string name="settins_index_module_title_trans_batch">批结算</string>
    <string name="settins_index_module_title_sign_up">创建操作员</string>
    <string name="settins_index_module_title_modify_pwd">修改密码</string>
    <string name="settins_index_module_title_list_users">操作员列表</string>
    <string name="others_index_module_title_pre_authorization">预授权</string>
    <string name="others_index_module_title_balance">余额查询</string>
    <string name="others_index_module_title_settings">设置</string>
    <string name="balance_result_tv_title_balance">余额：</string>
    <string name="pin_pad_tv_input_pwd">请输入密码</string>
    <string name="pin_pad_tv_java_input_authCode">请输入验证码</string>
    <string name="del_voucher_info_btn_confirm">完 成</string>
    <string name="del_voucher_info_tv_voucherId">提货券号</string>
    <string name="del_voucher_info_tv_productName">产品名称</string>
    <string name="del_voucher_info_tv_dateRange">有效期</string>
    <string name="del_voucher_info_tv_details">详情</string>
    <string name="consumption_record_tv_orderSource">订单来源</string>
    <string name="consumption_record_tv_transType">交易类型</string>
    <string name="consumption_record_tv_payType">支付方式</string>
    <string name="consumption_record_tv_mOrderId">订单号</string>
    <string name="consumption_record_tv_rrn">参考号</string>
    <string name="consumption_record_tv_transDate">日期</string>
    <string name="consumption_record_tv_transTime">时间</string>
    <string name="consumption_record_tv_transAmount">金额(%1$s)</string>
    <string name="consumption_record_tv_orderStatus">状态</string>
    <string name="consumption_record_tv_paidAmount">已付金额</string>
    <string name="consumption_record_tv_balance">差额</string>
    <string name="consumption_record_tv_totalAmount">交易总金额</string>
    <string name="users_user_name">用户名</string>
    <string name="users_user_gradeId">等级</string>
    <string name="users_user_aliasName">别名</string>
    <string name="users_user_lastLoginTime">上次登录时间</string>
    <string name="users_user_loginCount">登录次数</string>
    <string name="users_username_choose">选择</string>
    <string name="multipay_record_tv_no">编号</string>
    <string name="multipay_record_tv_transType">支付方式</string>
    <string name="multipay_record_tv_rrn">参考号</string>
    <string name="multipay_record_tv_transDate">日期</string>
    <string name="multipay_record_tv_transTime">时间</string>
    <string name="multipay_record_tv_transAmount">金额</string>
    <string name="multipay_record_tv_orderStatus">状态</string>
    <string name="multipay_record_tv_paidAmount">已付金额:</string>
    <string name="multipay_record_tv_balance">差额:</string>
    <string name="multipay_record_tv_totalAmount">交易总金额:</string>
    <string name="multipay_record_btn_text_confirm">完  成</string>
    <string name="multipay_record_btn_text_pay">继续支付</string>
    <string name="order_detail_tv_transDate">交易时间</string>
    <string name="order_detail_tv_transAmount">订单金额</string>
    <string name="order_detail_operator">操作员</string>
    <string name="order_detail_tv_transType">交易类型</string>
    <string name="order_detail_btn_operation_text_refund">退货</string>
    <string name="order_detail_btn_operation_text_print">打印</string>
    <string name="order_detail_btn_operation_text_cancel">撤销</string>
    <string name="order_detail_btn_operation_text_auth_complete">联机完成</string>
    <string name="order_detail_btn_operation_text_auth_settlement">离线完成</string>
    <string name="order_detail_btn_operation_text_confirm">确定</string>
    <string name="order_detail_btn_operation_text_back">返回</string>
    <string name="order_detail_btn_operation_text_btn_cancel">关闭</string>
    <string name="order_detail_btn_operation_cancel">取消</string>
    <string name="order_detail_btn_operation_text_coupon">发券</string>
    <string name="order_detail_btn_sent_text_coupon">已发券</string>
    <string name="order_detail_tv_payType">支付方式</string>
    <string name="order_detail_tv_orderId">参考号</string>
    <string name="order_detail_tv_orderStatus">支付状态</string>
    <string name="order_detail_tv_authCode">授权码</string>
    <string name="order_detail_reprint_str">重新打印</string>
    <string name="order_detail_trans_status_confirm">查询</string>
    <string name="login_tv_userName">操作员</string>
    <string name="login_tv_pwd">密码</string>
    <string name="msg_login">登录</string>
    <string name="msg_mod_pwd_submit">确定</string>
    <string name="msg_mod_pwd_hint_pwd_origin_input">请输入原密码</string>
    <string name="msg_mod_pwd_hint_pwd_input">请输入新密码</string>
    <string name="msg_mod_pwd_hint_pwd_input_confirm">请确认新密码</string>
    <string name="msg_mod_pwd_hint_error_dialog">密码不一致，请重新输入</string>
    <string name="msg_mod_pwd_hint_diffent_pwd_dialog">请输入不同的密码</string>
    <string name="msg_account_hint">请输入高级别账号</string>
    <string name="msg_pwd_hint">请输入密码</string>
    <string name="msg_printer_issues">请检查打印机状态及打印纸！</string>
    <string name="msg_idcard_error" translatable="false">身份证号码长度不正确！</string>
    <string name="create_userName">请输入用户名</string>
    <string name="create_userName_pwd_1st">请输入密码</string>
    <string name="create_userName_pwd_2nd">请再次输入密码</string>
    <string name="createOK">创建</string>
    <string name="consumption_record_search_tv_startDate">起始日期</string>
    <string name="consumption_record_search_tv_endDate">结束日期</string>
    <string name="consumption_record_search_btn_confirm_text">确  定</string>
    <string name="pay_method_title_card">刷卡</string>
    <string name="pay_method_title_account">通联帐户</string>
    <string name="consumption_record_search_java_dateRangeNotice">只能搜索最近半年的消费记录</string>
    <string name="del_voucher_record_search_tv_startDate">起始日期</string>
    <string name="del_voucher_record_search_tv_endDate">结束日期</string>
    <string name="del_voucher_record_search_btn_confirm_text">确  定</string>
    <string name="del_voucher_record_listTitle_voucherName">券名</string>
    <string name="del_voucher_record_listTitle_date">提货日期</string>
    <string name="del_voucher_record_listTitle_voucherId">券号</string>
    <string name="del_voucher_record_listTitle_voucherNum">数量</string>
    <string name="del_voucher_record_listTitle_operation">操作</string>
    <string name="del_voucher_record_search_java_dateRangeNotice">起始日期必须小于结束日期</string>
    <string name="del_voucher_record_notice_cancelConfirm_prefix">是否撤销券号为</string>
    <string name="del_voucher_record_notice_cancelConfirm_suffix">的提货操作</string>
    <string name="alert_btn_positive">确定</string>
    <string name="alert_btn_negative">取消</string>
    <string name="waiting_dialog_msg_reverse">正在冲正</string>
    <string name="merchant_info_tv_merchId">酷云客户号：</string>
    <string name="merchant_info_tv_machineId">酷云设备号：</string>
    <string name="merchant_info_tv_merchName">客户名称：</string>
    <string name="merchant_info_tv_merchAccount">客户结算账户：</string>
    <string name="merchant_info_tv_operator">操作员:</string>
    <string name="input_money_et_money_hint">0</string>
    <string name="pay_account_tv_amount">金额</string>
    <string name="pay_account_btn_qrcode">二维码</string>
    <string name="pay_account_btn_sound" >声波</string>
    <string name="pay_account_btn_swiper">刷卡/插卡</string>
    <string name="pay_account_btn_keyboard">手动输入</string>
    <string name="pay_account_btn_ic">IC卡</string>
    <string name="pay_account_tag_qrcode">qrcode</string>
    <string name="pay_account_tag_sound">sound</string>
    <string name="pay_account_tag_swiper">swiper</string>
    <string name="pay_account_tag_keyboard">keyboard</string>
    <string name="pay_account_tag_ic">ic</string>
    <string name="pay_account_tag_input_password">请输入密码！</string>
    <string name="pay_account_input_ic_guide">请插入IC卡</string>
    <string name="pay_account_input_swiper_ic_guide">请刷磁卡或者插入IC卡！</string>
    <string name="ic_status_insert_warning_1">IC卡已插入，正在处理，请勿拔卡！</string>
    <string name="ic_status_insert_warning_2">IC卡已拔出！请点击密码键盘上的取消键！</string>
    <string name="ic_status_insert_warning_3">IC卡已拔出！</string>
    <string name="ic_status_insert_warning_4">密码获取中，请勿拔卡！</string>
    <string name="sum_payable_mark">应付金额： </string>
    <string name="paid_amount_mark">实付金额： </string>
    <string name="change_mark">找零： </string>
    <string name="no_amount">0.00</string>
    <string name="input_amount">请点击输入金额</string>
    <string name="amount_unit">元</string>
    <string name="cash_confirm">确定</string>
</resources>