<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp" >

        <LinearLayout style="@style/module_layout" >

            <Button
                style="@style/module_logo"
                android:background="@drawable/logo_login"
                android:onClick="gotoLogin" />

            <TextView
                style="@style/module_title"
                android:text="@string/settins_index_module_title_login" />
        </LinearLayout>

        <LinearLayout style="@style/module_layout" >

            <Button
                style="@style/module_logo"
                android:background="@drawable/logo_logout"
                android:onClick="gotoLogout" />

            <TextView
                style="@style/module_title"
                android:text="@string/settins_index_module_title_logout" />
        </LinearLayout>

        <LinearLayout style="@style/module_layout" >

            <Button
                style="@style/module_logo"
                android:background="@drawable/logo_merchant_info"
                android:onClick="gotoMerchantInfo" />

            <TextView
                style="@style/module_title"
                android:text="@string/settins_index_module_title_merchant_info" />
        </LinearLayout>

        <LinearLayout style="@style/module_layout" >

            <Button
                style="@style/module_logo"
                android:background="@drawable/logo_set_merch_id"
                android:onClick="gotoSetMerchId" />

            <TextView
                style="@style/module_title"
                android:text="@string/settins_index_module_title_setMerchId" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:weightSum="4" >

        <LinearLayout style="@style/module_layout" >

            <Button
                style="@style/module_logo"
                android:background="@drawable/logo_set_machine_id"
                android:onClick="gotoSetMachineId" />

            <TextView
                style="@style/module_title"
                android:text="@string/settins_index_module_title_setMachineId" />
        </LinearLayout>

        <LinearLayout style="@style/module_layout" >

            <Button
                style="@style/module_logo"
                android:background="@drawable/logo_clear_reverse_data"
                android:onClick="clearReverseData" />

            <TextView
                style="@style/module_title"
                android:text="@string/settins_index_module_title_clearReverseData" />
        </LinearLayout>

        <LinearLayout style="@style/module_layout" >

            <Button
                style="@style/module_logo"
                android:background="@drawable/logo_setting_download"
                android:onClick="downloadMerchData" />

            <TextView
                style="@style/module_title"
                android:text="@string/settins_index_module_title_downloadMerchData" />
        </LinearLayout>
    </TableRow>

</TableLayout>