<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/main_page_bg_bitmap"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="540dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cash_sum_payable_mark"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:text="@string/sum_payable_mark"
            android:textSize="@dimen/cash_amount_textsize"/>

        <EditText
            android:id="@+id/cash_sum_payable"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:hint="@string/no_amount"
            android:textSize="@dimen/cash_amount_textsize"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:background="@null"/>

        <TextView
            android:layout_width="40dp"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:text="@string/amount_unit"
            android:textSize="@dimen/cash_amount_textsize"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="540dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cash_paid_amount_mark"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:text="@string/paid_amount_mark"
            android:textSize="@dimen/cash_amount_textsize"/>

        <EditText
            android:id="@+id/cash_paid_amount"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:hint="@string/input_amount"
            android:textSize="@dimen/cash_amount_textsize"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:background="@null"/>

        <TextView
            android:layout_width="40dp"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:text="@string/amount_unit"
            android:textSize="@dimen/cash_amount_textsize"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="540dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cash_change_mark"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:gravity="right|center_vertical"
            android:text="@string/change_mark"
            android:textSize="@dimen/cash_amount_textsize"/>

        <TextView
            android:id="@+id/cash_change_amount"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:hint="@string/no_amount"
            android:textSize="@dimen/cash_amount_textsize"
            android:background="@null"/>

        <TextView
            android:layout_width="40dp"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:text="@string/amount_unit"
            android:textSize="@dimen/cash_amount_textsize"/>
    </LinearLayout>
    
    <Button 
        android:layout_marginTop="100dp"
		android:layout_width="@dimen/cash_btn_width"
		android:layout_height="@dimen/cash_btn_height"
		android:textSize="@dimen/cash_btn_textsize"
		android:textColor="@android:color/white"
		android:text="@string/cash_confirm"
		android:background="@drawable/button_blue_background"
		android:onClick="onClickBtnOK"/>

</LinearLayout>